--- a/.gitignore
+++ b/.gitignore
@@ -74,6 +74,9 @@ Plugins/*/Intermediate/*
 # Cache files for the editor to use
 DerivedDataCache/*
 
+# Builds
+Builds/
+
 # Assets from Marketplace
 StarterContent/
 ModSci*/
