--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -4,14 +4,14 @@
 +EditProfiles=(Name="Trigger",CustomResponses=((Channel=Projectile, Response=ECR_Ignore)))
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/FirstPersonCPP/Maps/FirstPersonExampleMap
+EditorStartupMap=/Game/Maps/SpaceStation.SpaceStation
 LocalMapOptions=
 TransitionMap=
 bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
 GameInstanceClass=/Script/Engine.GameInstance
-GameDefaultMap=/Game/FirstPersonCPP/Maps/FirstPersonExampleMap
+GameDefaultMap=/Game/Maps/SpaceStation.SpaceStation
 ServerDefaultMap=/Engine/Maps/Entry
 GlobalDefaultGameMode=/Script/SpaceFPS.SpaceFPSGameMode
 GlobalDefaultServerGameMode=None
